--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ dependencies {
 	// https://mvnrepository.com/artifact/com.google.apis/google-api-services-drive
 	implementation 'com.google.apis:google-api-services-drive:v3-rev197-1.25.0'
 
+	// https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-javafx
+	implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
+
+	// https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-materialdesign2-pack
+	implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
